--- a/HeroesOfPymoli/main.ipynb
+++ b/HeroesOfPymoli/main.ipynb
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "108           $3.53                $31.77  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,17 +805,129 @@
     "\n",
     "most_pop_gpby = data_df[[\"Item ID\", \"Item Name\", \"Price\", \"Purchase ID\"]].groupby([\"Item ID\", \"Item Name\"])\n",
     "\n",
-    "# get the 5 most frequently purchased items & their data, then sort & get top 5 using iloc\n",
-    "most_pop_df = most_pop_gpby[\"Purchase ID\"].count().reset_index()\n",
-    "most_pop_df[\"Item Price\"] = most_pop_gpby[\"Price\"].mean().reset_index()[\"Price\"]\n",
-    "most_pop_df[\"Total Purchase Value\"] = most_pop_gpby[\"Price\"].sum().reset_index()[\"Price\"]\n",
-    "most_pop_df = most_pop_df.sort_values(\"Purchase ID\", ascending=False).iloc[:5]\n",
+    "# get the 5 most frequently purchased items & their data\n",
+    "by_item_df = most_pop_gpby[\"Purchase ID\"].count().reset_index()\n",
+    "by_item_df[\"Item Price\"] = most_pop_gpby[\"Price\"].mean().reset_index()[\"Price\"]\n",
+    "by_item_df[\"Total Purchase Value\"] = most_pop_gpby[\"Price\"].sum().reset_index()[\"Price\"]\n",
     "\n",
     "# do housekeeping\n",
-    "most_pop_df = most_pop_df.rename(columns={\"Purchase ID\": \"Purchase Count\"})\n",
-    "most_pop_df = most_pop_df.set_index(\"Item ID\")\n",
+    "by_item_df = by_item_df.rename(columns={\"Purchase ID\": \"Purchase Count\"})\n",
+    "by_item_df = by_item_df.set_index(\"Item ID\")\n",
+    "\n",
+    "# sort & get top 5 using iloc\n",
+    "most_pop_df = by_item_df.sort_values(\"Purchase Count\", ascending=False).iloc[:5]\n",
     "\n",
     "most_pop_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Item Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>13</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>$59.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>Oathbreaker, Last Hope of the Breaking Storm</td>\n",
+       "      <td>12</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>$50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>Nirvana</td>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.90</td>\n",
+       "      <td>$44.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>Fiery Glass Crusader</td>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.58</td>\n",
+       "      <td>$41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>Singed Scalpel</td>\n",
+       "      <td>8</td>\n",
+       "      <td>$4.35</td>\n",
+       "      <td>$34.80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            Item Name  Purchase Count  \\\n",
+       "Item ID                                                                 \n",
+       "92                                       Final Critic              13   \n",
+       "178      Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82                                            Nirvana               9   \n",
+       "145                              Fiery Glass Crusader               9   \n",
+       "103                                    Singed Scalpel               8   \n",
+       "\n",
+       "         Item Price  Total Purchase Value  \n",
+       "Item ID                                    \n",
+       "92            $4.61                $59.99  \n",
+       "178           $4.23                $50.76  \n",
+       "82            $4.90                $44.10  \n",
+       "145           $4.58                $41.22  \n",
+       "103           $4.35                $34.80  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Most Profitable Items\n",
+    "\n",
+    "most_profitable_df = by_item_df.sort_values(\"Total Purchase Value\", ascending=False).iloc[:5]\n",
+    "\n",
+    "most_profitable_df"
    ]
   },
   {
