Readme, plus tweaks

--- a/HeroesOfPymoli/main.ipynb
+++ b/HeroesOfPymoli/main.ipynb
@@ -16,23 +16,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Purchase ID', 'SN', 'Age', 'Gender', 'Item ID', 'Item Name', 'Price']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_path = 'Resources/purchase_data.csv'\n",
-    "data_df = pd.read_csv(csv_path)\n",
-    "\n",
-    "list(data_df)"
+    "data_df = pd.read_csv(csv_path)"
    ]
   },
   {
